fix: スタイル修正 firefoxだとhtml overflow-y: hidden しないと画面全体で二重にスクロールが発生する

--- a/next/app/globals.css
+++ b/next/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    overflow-y: hidden;
+}
+
 html,
 body {
     overflow-x: hidden;
